--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         flex: 1;
       }
     </style>
-  <link rel="icon" href="/favicon.ico" /></head>
+  <link rel="icon" href="/expo-app/favicon.ico" /></head>
 
   <body>
     <!-- Use static rendering with Expo Router to support running without JavaScript. -->
@@ -32,6 +32,6 @@
     </noscript>
     <!-- The root element for your Expo app. -->
     <div id="root"></div>
-  <script src="/_expo/static/js/web/index-f2bd528b524a422dd3d2520691740cc5.js" defer></script>
+  <script src="/expo-app/_expo/static/js/web/index-f2bd528b524a422dd3d2520691740cc5.js" defer></script>
 </body>
 </html>
